--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:0.3-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 19 Aug 2014 18:41:11 +0000
+
 anon-shared-build-upgrade-torsocks (3:0.2-2) unstable; urgency=low
 
   * Fixed changelog date.
