--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:0.4-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 13 Oct 2014 12:32:54 +0000
+
 anon-shared-build-upgrade-torsocks (3:0.3-1) unstable; urgency=low
 
   * New upstream version.
