--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:0.6-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 26 Oct 2014 16:23:42 +0000
+
 anon-shared-build-upgrade-torsocks (3:0.5-1) unstable; urgency=low
 
   * New upstream version.
