--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:0.7-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 04 Feb 2015 00:51:32 +0000
+
 anon-shared-build-upgrade-torsocks (3:0.6-1) unstable; urgency=low
 
   * New upstream version.
