--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:0.8-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 24 Mar 2015 17:28:51 +0000
+
 anon-shared-build-upgrade-torsocks (3:0.7-1) unstable; urgency=low
 
   * New upstream version.
