--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:0.9-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 07 Apr 2015 17:41:15 +0000
+
 anon-shared-build-upgrade-torsocks (3:0.8-1) unstable; urgency=low
 
   * New upstream version (local package).
