--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:1.0-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 30 Apr 2015 17:55:52 +0000
+
 anon-shared-build-upgrade-torsocks (3:0.9-1) unstable; urgency=low
 
   * New upstream version (local package).
