--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:1.1-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 15 May 2015 20:24:44 +0000
+
 anon-shared-build-upgrade-torsocks (3:1.0-1) unstable; urgency=low
 
   * New upstream version (local package).
