--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:1.2-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 03 Jun 2015 14:59:12 +0000
+
 anon-shared-build-upgrade-torsocks (3:1.1-1) unstable; urgency=low
 
   * New upstream version (local package).
