--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:1.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 24 Aug 2015 17:47:13 +0000
+
 anon-shared-build-upgrade-torsocks (3:1.2-1) unstable; urgency=low
 
   * New upstream version (local package).
