--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-shared-build-upgrade-torsocks (3:1.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 25 Aug 2015 14:07:44 +0000
+
 anon-shared-build-upgrade-torsocks (3:1.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
